--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,7 +19,7 @@
 	<% } %>
 
 	<!-- LOGIN FORM -->
-	<form action="/auth/signup" method="post">
+	<form action="/api/signup" method="post">
 		<div class="form-group">
 			<label>Email</label>
 			<input type="text" class="form-control" name="email">
