updated css to include media queries, finished auth for mobile

--- a/client/src/components/Navigation/Sidebar/SidebarToggle/SidebarToggle.module.css
+++ b/client/src/components/Navigation/Sidebar/SidebarToggle/SidebarToggle.module.css
@@ -1,4 +1,4 @@
-.DrawerToggle {
+.SidebarToggle {
     width: 40px;
     height: 100%;
     display: flex;
@@ -10,14 +10,14 @@
     cursor: pointer;
 }
 
-.DrawerToggle div {
+.SidebarToggle div {
     width: 90%;
     height: 3px;
     background-color: white;
 }
 
 @media (min-width: 500px) {
-    .DrawerToggle {
+    .SidebarToggle {
         display: none;
     }
 }
