--- a/client/src/components/Layout/Layout.module.css
+++ b/client/src/components/Layout/Layout.module.css
@@ -1,5 +1,12 @@
+/* For mobile phones: */
 .Layout {
-    margin: 10vh 15% 0;
-    padding: 6vh 0 0;
+    padding: 6vh 0;
 }
 
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+}
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+}
