--- a/client/src/components/Navigation/Sidebar/Sidebar.module.css
+++ b/client/src/components/Navigation/Sidebar/Sidebar.module.css
@@ -6,10 +6,15 @@
     left: 0;
     top: 0;
     z-index: 200;
-    background-color: white;
+    background-color: rgba(144, 252, 252, 0.781);
     padding: 32px 16px;
     box-sizing: border-box;
     transition: transform 0.3s ease-out;
+    text-align: center;
+}
+
+.Sidebar .NavItem{
+    background-color: rgb(144, 252, 252)
 }
 
 @media (min-width: 500px) {
