--- a/client/src/components/pages/Auth/Auth.module.css
+++ b/client/src/components/pages/Auth/Auth.module.css
@@ -1,10 +1,8 @@
 .Auth {
-    margin-top: 5vh;
     text-align: center;
     align-items: center;
     padding: 20px 5vw;
     color: rgb(255, 255, 255);   
-    background-color: rgba(116, 116, 116, 0.39);
 }
 .Auth a { 
     width: 100%;
@@ -35,6 +33,7 @@
 
 .AuthToggle {
     border: none;
+    padding: 0 0 2vh;
     width: 50%;
     background-color: transparent;
     color: rgb(23, 4, 53);
