--- a/client/src/components/pages/Auth/Auth.module.css
+++ b/client/src/components/pages/Auth/Auth.module.css
@@ -1,8 +1,9 @@
-.Auth {
+.Auth {       
+    margin-top: 5vh;
     text-align: center;
     align-items: center;
-    padding: 20px 5vw;
-    color: rgb(255, 255, 255);   
+    color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 .Auth a { 
     width: 100%;
@@ -27,13 +28,23 @@
 .AuthBtn {
     color: rgb(255, 255, 255);   
     width: 100%;
-    height: 45px;
-    background-color: rgb(26, 8, 47);
+    height: 35px;
+    background-color: rgb(45, 17, 77);
+}
+
+.AuthBtn:hover {
+    color: rgb(255, 255, 255);
+    background-color: rgb(40, 18, 63);
+}
+
+
+.AuthNav {
+    width: 100%;
+    display: flex;
 }
 
 .AuthToggle {
     border: none;
-    padding: 0 0 2vh;
     width: 50%;
     background-color: transparent;
     color: rgb(23, 4, 53);
@@ -55,3 +66,18 @@ input:focus {outline:0;}
 input::placeholder{
     color: rgb(255, 255, 255);   
   }
+
+  @media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .Auth {
+        margin: 10vh 25vw 0;
+    }
+}
+
+@media only screen and (min-width: 1025px) {
+    /* For desktop: */
+    .Auth {
+        margin: 10vh 35vw 0;
+        padding: 7vh 5vw;
+    }
+}
