--- a/client/src/components/pages/Characters/Characters.module.css
+++ b/client/src/components/pages/Characters/Characters.module.css
@@ -1,11 +1,11 @@
-.Faqs {
+.Characters {
     background-color: rgb(34, 26, 0);
 }
 
 
 @media only screen and (min-width: 600px) {
     /* For tablets: */
-    .Faqs {
+    .Characters {
         margin: 2vh 5vw 0;
         padding: 7vh 5vw;
     }
@@ -13,7 +13,7 @@
 
 @media only screen and (min-width: 1025px) {
     /* For desktop: */
-    .Faqs {
+    .Characters {
         margin: 2vh 15vw 0;
         padding: 7vh 5vw;
     }
