--- a/client/src/components/pages/Shop/Store/Item.module.css
+++ b/client/src/components/pages/Shop/Store/Item.module.css
@@ -2,4 +2,20 @@
     margin: 2vh 0;
     width: 50%;
     text-align: center;
+    align-items: center;
+}
+
+
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .Item {
+        width: 25%;
+    }
+}
+
+@media only screen and (min-width: 1025px) {
+    /* For desktop: */
+    .Item {
+        width: 25%;
+    }
 }
