--- a/client/src/components/pages/Shop/Item/Item.module.css
+++ b/client/src/components/pages/Shop/Item/Item.module.css
@@ -5,6 +5,20 @@
     align-items: center;
 }
 
+.Item .CardImage .CardTitle{
+    color: black;
+    font-weight: 400
+}
+
+.MaterialIcons {
+/*    font-size: 2.4em; */
+    cursor: pointer;
+}
+
+.ItemDesc{
+    align-self:center;
+}
+
 
 @media only screen and (min-width: 600px) {
     /* For tablets: */
