created a shop template that pages within the shop can share styles

--- a/client/src/components/pages/Shop/Shop.module.css
+++ b/client/src/components/pages/Shop/Shop.module.css
@@ -2,6 +2,10 @@
     background-color: rgb(34, 26, 0);
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
 .filter {
     display: flex;
     margin: 2vh 0;
