--- a/client/src/components/pages/Shop/Items/Item/Item.module.css
+++ b/client/src/components/pages/Shop/Items/Item/Item.module.css
@@ -26,6 +26,13 @@
     align-self:center;
 }
 
+.card{
+    width: 300px;
+}
+.CardTitle{
+    font-weight: 400
+}
+
 
 @media only screen and (min-width: 600px) {
     /* For tablets: */
