removed materialize preset

--- a/client/src/components/pages/Auth/Auth.module.css
+++ b/client/src/components/pages/Auth/Auth.module.css
@@ -64,6 +64,9 @@
     white-space: nowrap; 
 }
 
+:focus-visible {
+    background-color: white;
+}
 button:focus {outline:0;}
 input:focus {outline:0;}
 input::placeholder{
