updated a text-decorations

--- a/client/src/components/Navigation/Navbar/Navbar.module.css
+++ b/client/src/components/Navigation/Navbar/Navbar.module.css
@@ -45,6 +45,21 @@ a:hover {
     color: white;
 }
 
+a:active {
+    color: white;
+    text-decoration: none;
+
+}
+
+a:link {
+    text-decoration: white;
+}
+  
+a:visited {
+    text-decoration: white;
+}
+
+
 .DesktopOnly {
     display: none;
 }
