--- a/client/src/components/pages/Auth/Auth.module.css
+++ b/client/src/components/pages/Auth/Auth.module.css
@@ -60,7 +60,13 @@
     color: rgb(23, 4, 53);
     color: rgb(255, 255, 255);   
     font-weight: bold;
-    white-space: nowrap; 
+    white-space: nowrap;
+}
+
+.AuthSelected {
+    border-bottom-color: rgb(255, 255, 255);
+    border-bottom-width: 3px;
+    border-bottom-style: solid;
 }
 
 :focus-visible {
