--- a/client/src/components/Navigation/Navbar/Navbar.module.scss
+++ b/client/src/components/Navigation/Navbar/Navbar.module.scss
@@ -68,6 +68,14 @@ a:visited {
     height: 1vh;
 }
 
+
+
+.Logo {
+    height: 100%;
+    padding: 3px;
+}
+
+
 @media only screen and (min-width: 600px) {
     /* For tablets: */
     .DesktopOnly {
