--- a/client/src/components/pages/Auth/Auth.module.scss
+++ b/client/src/components/pages/Auth/Auth.module.scss
@@ -3,6 +3,7 @@
     align-items: center;
     color: rgb(255, 255, 255);
     background-color: rgba(0, 0, 0, 0.5);
+    min-width: 40vw;
 }
 .Auth a { 
     width: 100%;
@@ -18,7 +19,6 @@
     width: 100%;
     height: 34px;
     margin: 2vh 0;
-
     background-color: transparent;
     border: none;
     border-bottom-color:rgb(23, 4, 53);
@@ -72,6 +72,7 @@
 :focus-visible {
     background-color: white;
 }
+
 button:focus {outline:0;}
 input:focus {outline:0;}
 input::placeholder{
