--- a/client/src/components/pages/Pages.module.scss
+++ b/client/src/components/pages/Pages.module.scss
@@ -33,7 +33,6 @@
 
 
 .Card {
-    margin: 0 5vw;
     padding: 2vh 5vw;
 }
 
@@ -131,18 +130,27 @@
     opacity:1;
 }
 
+.Card {
+    background-color: rgb(34, 26, 0);
+    margin: 0 2vw 0;
+    padding: 7vh 5vw;
 
+}
 
 @media only screen and (min-width: 600px) {
     /* For tablets: */
     .Card {
+        margin: 0 5vw 0;
+        padding: 7vh 5vw;
     }
 }
 
 @media only screen and (min-width: 1025px) {
     /* For desktop: */
     .Card {
-
+        margin: 0 15vw 0;
+        padding: 7vh 5vw;
+        min-width: 70vw;
     }
 }
 
