--- a/client/src/components/pages/Pages.module.scss
+++ b/client/src/components/pages/Pages.module.scss
@@ -133,7 +133,7 @@
 .Card {
     background-color: rgb(34, 26, 0);
     margin: 0 2vw 0;
-    padding: 7vh 5vw;
+    padding: 5vh 5vw 2vh;
 
 }
 
@@ -141,7 +141,7 @@
     /* For tablets: */
     .Card {
         margin: 0 5vw 0;
-        padding: 7vh 5vw;
+        padding: 5vh 5vw 2vh;
     }
 }
 
@@ -149,7 +149,7 @@
     /* For desktop: */
     .Card {
         margin: 0 15vw 0;
-        padding: 7vh 5vw;
+        padding: 5vh 5vw 2vh;
         min-width: 70vw;
     }
 }
