--- a/client/src/components/pages/profile/Link/Link.module.scss
+++ b/client/src/components/pages/profile/Link/Link.module.scss
@@ -1,4 +1,7 @@
 .Link {
-    margin: 0;
-    width: 50%;
+    margin: 1% 1%;;
+    display: inline-block;
+    padding: 2vh 2vw;
+    width: 48%;
+    background-color:#271e00;
 }
