--- a/client/src/components/pages/Characters/Characters.module.scss
+++ b/client/src/components/pages/Characters/Characters.module.scss
@@ -6,6 +6,6 @@ input {
     color: rgb(255, 255, 255);   
     height: 34px;
     margin: 2vh 0;
-    background-color: transparent;
+    background-color: white;
     border: none;
 }
