--- a/client/src/components/pages/profile/Link/Link.module.scss
+++ b/client/src/components/pages/profile/Link/Link.module.scss
@@ -1,7 +1,7 @@
 .Link {
-    margin: 1% 1%;;
+    margin: 0 0 2vh;
     display: inline-block;
     padding: 2vh 2vw;
-    width: 48%;
+    width:100%;
     background-color:#271e00;
 }
