--- a/client/src/components/pages/Pages.module.scss
+++ b/client/src/components/pages/Pages.module.scss
@@ -7,9 +7,6 @@
     color: white;
 }
 
-.inline {
-    display: inline;
-}
 .spread {
     margin: 2.3vh;
     display: flex;
@@ -147,6 +144,13 @@ input:focus {outline:0;}
 input::placeholder{
     color: rgb(255, 255, 255);   
   }
+
+
+.line {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 
 
 @media only screen and (min-width: 600px) {
