made some style changes

--- a/client/src/components/pages/Shop/Shop.module.scss
+++ b/client/src/components/pages/Shop/Shop.module.scss
@@ -25,13 +25,11 @@ a {
     width: 100%;
 }
 
-.Search {
-    margin: 1vh 1vw;
-    padding: 1vh 2vw;
-}
 
 .dropbtn {
     background-color: transparent;
+    width: 30vw;
+    margin: 0;
     padding: 1vh 2vw;
     color: white;
     border: none;
