--- a/client/src/components/Navigation/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Navigation/Sidebar/Sidebar.module.scss
@@ -13,6 +13,10 @@
     text-align: center;
 }
 
+.Logo {
+    height: 11%;
+    margin-bottom: 32px;
+}
 
 @media (min-width: 600px) {
     .Sidebar {
