--- a/client/src/components/Navigation/NavItems/NavItem/NavItem.module.scss
+++ b/client/src/components/Navigation/NavItems/NavItem/NavItem.module.scss
@@ -3,8 +3,8 @@
     width: 100%;
     height: 6vh;
     font-size: 1.5rem;
-    display: block;
     box-sizing: border-box;
+    text-align: center;
 }
 
 .NavItem a {
@@ -12,7 +12,10 @@
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
-    display: block;
+}
+
+.NavItem P {
+    margin: 0;
 }
 
 .NavItem a:hover
