--- a/client/src/components/pages/Pages.module.scss
+++ b/client/src/components/pages/Pages.module.scss
@@ -142,7 +142,7 @@
 button:focus {outline:0;}
 input:focus {outline:0;}
 input::placeholder{
-    color: rgb(255, 255, 255);   
+
   }
 
 
@@ -153,6 +153,17 @@ input::placeholder{
     text-align: center;
 }
 
+
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+}
 
 @media only screen and (min-width: 600px) {
     /* For tablets: */
