renamed sovereignty and added updated text styles

--- a/client/src/components/pages/Faqs/Faqs.module.scss
+++ b/client/src/components/pages/Faqs/Faqs.module.scss
@@ -2,6 +2,15 @@
     background-color: rgb(34, 26, 0);
 }
 
+.Faq {
+    margin: 1vh 0 3vh;
+}
+
+.Faqs ul {
+    list-style-type: disc;
+}
+
+
 
 @media only screen and (min-width: 600px) {
     /* For tablets: */
