--- a/client/src/components/pages/Auth/Auth.module.scss
+++ b/client/src/components/pages/Auth/Auth.module.scss
@@ -16,7 +16,7 @@
 
 
 .AuthInput {
-    color: rgb(255, 255, 255);   
+    color: rgb(255, 255, 255) !important;   
     width: 100%;
     height: 34px;
     margin: 2vh 0;
