fixed cart now showing properly in sidebar

--- a/client/src/components/pages/Pages.module.scss
+++ b/client/src/components/pages/Pages.module.scss
@@ -151,6 +151,7 @@ input::placeholder{
     flex-direction: row;
     align-items: center;
     text-align: center;
+    justify-content: center;
 }
 
 
