--- a/client/src/components/pages/Auth/Auth.module.scss
+++ b/client/src/components/pages/Auth/Auth.module.scss
@@ -20,10 +20,22 @@
     width: 100%;
     height: 34px;
     margin: 2vh 0;
-    background-color: transparent;
+    background-color: transparent !important;
     border: none;
     border-bottom-color:rgb(23, 4, 53);
     border-bottom-color: rgb(255, 255, 255);
+    border-bottom-width: 3px;
+    border-bottom-style: solid;
+}
+
+.AuthInput2 {
+    color: rgb(255, 255, 255) !important;   
+    width: 100%;
+    height: 34px;
+    margin: 2vh 0;
+    background-color: transparent !important;
+    border: none;
+    border-bottom-color: transparent;
     border-bottom-width: 3px;
     border-bottom-style: solid;
 }
@@ -51,6 +63,9 @@
     color: rgb(255, 255, 255);   
     font-weight: bold;
     white-space: nowrap;
+    border-bottom-color: transparent;
+    border-bottom-width: 3px;
+    border-bottom-style: solid;
 }
 
 .AuthSelected {
@@ -59,6 +74,10 @@
     border-bottom-style: solid;
 }
 
+
+#inputId:-webkit-autofill {
+    background-color: black !important;
+}
 
 
   @media only screen and (min-width: 600px) {
