--- a/client/src/components/Wrapper/Wrapper.module.scss
+++ b/client/src/components/Wrapper/Wrapper.module.scss
@@ -3,3 +3,22 @@
     height: 100%;
     color: white;
 }
+
+/* For mobile phones: */
+.Layout {
+    padding: 6vh 0;
+}
+
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .Layout {
+        padding: 6vh 0;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .Layout {
+        padding: 6vh 0;
+    }
+}
