--- a/client/src/components/pages/Authors/Author/Author.module.scss
+++ b/client/src/components/pages/Authors/Author/Author.module.scss
@@ -1,9 +1,9 @@
 .Author {
     display: grid;
     grid-gap: .25em;
-	grid-template-columns: 3fr 1fr;
+	grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     grid-template-areas:
-		"title thumbnail"
-		"description thumbnail"
+		"title"
+		"description"
 }
