added Modal to profile page and updated styles

--- a/client/src/components/UI/Modal/Modal.module.scss
+++ b/client/src/components/UI/Modal/Modal.module.scss
@@ -1,11 +1,9 @@
 .Modal {
     position: fixed;
     z-index: 500;
-    background-color: white;
-    width: 70%;
-    border: 1px solid #ccc;
-    box-shadow: 1px 1px 1px black;
-    padding: 16px;
+    background-color: #141311;
+    border: 1px solid rgb(27, 16, 6);
+    padding: 2vh 5vw 5vh;
     left: 15%;
     top: 30%;
     box-sizing: border-box;
@@ -14,7 +12,6 @@
 
 @media (min-width: 600px) {
     .Modal {
-        width: 500px;
         left: calc(50% - 250px);
     }
 }
