--- a/client/src/components/Wrapper/Wrapper.module.scss
+++ b/client/src/components/Wrapper/Wrapper.module.scss
@@ -1,5 +1,5 @@
 .Wrapper {
-    margin-top: 4vh;
+    margin-top: 1.5vh;
     height: 100%;
     color: white;
 }
@@ -14,11 +14,17 @@
     .Layout {
         padding: 6vh 0;
     }
+    .Wrapper {
+        margin-top: 4vh;
+    }
 }
 
 @media only screen and (min-width: 768px) {
     /* For desktop: */
     .Layout {
         padding: 6vh 0;
+    }
+    .Wrapper {
+        margin-top: 4vh;
     }
 }
