--- a/client/src/components/pages/Shop/Items/Item/Item.module.scss
+++ b/client/src/components/pages/Shop/Items/Item/Item.module.scss
@@ -1,19 +1,12 @@
 .Item {
-    margin: 0 0 4vh;
-    box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
-    border-radius: 6px;
-    align-items: center;
+    padding: 1vh 0;
     display: grid;
     gap: 2vw;
-    grid-template-columns: 1fr 150px 1fr 1fr;
+    grid-template-columns: 25px 1fr 100px 1fr 1fr;
     grid-template-areas: 
-        "img desc quant price";  
+    "img desc quant price";
 }
 
-.Item .CardImage .CardTitle{
-    color: black;
-    font-weight: 400
-}
 
 .MaterialIcons {
 /*    font-size: 2.4em; */
@@ -34,13 +27,6 @@ ul {
 img {
     max-height: 70px;
 }
-
-
-
-
-
-
-
 
 .Cart {
     margin: 0 auto;
@@ -75,7 +61,6 @@ img {
     grid-area: price;
     display: flex;
     align-items: center;
-    margin: auto;
     white-space: nowrap;
 }
 
