updated order summary styles

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -39,7 +39,7 @@ code {
 
 .btn-danger         { background-color: #d9534f;}
 .my-btn-danger      { color: #d9534f;}
-.btn-danger:hover   { background-color: #b94743;}
+.btn-danger:hover   { background-color: #131111;}
 
 a ::selection       { color: white !important; }
 a :active           { color: white !important; }
