--- a/client/src/components/UI/Modal/Modal.module.scss
+++ b/client/src/components/UI/Modal/Modal.module.scss
@@ -1,17 +1,19 @@
 .Modal {
     position: fixed;
     z-index: 500;
-    background-color: #141311;
+    background-color: #221a00;
     border: 1px solid rgb(27, 16, 6);
     padding: 2vh 5vw 5vh;
-    left: 15%;
+    left: 25%;
     top: 30%;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
 }
 
-@media (min-width: 600px) {
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
     .Modal {
-        left: calc(50% - 250px);
+        // left: calc(50% - 250px);
+        left: 35%;
     }
 }
