added order delivery form

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -52,3 +52,8 @@ input               { color: black !important; }
 }
 
 .text-center        { text-align: center; }
+
+.border-bottom {
+  border-bottom: 1px solid #E1E8EE;
+  padding: 0;
+}
