added routes and updated Shipping section

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -57,3 +57,9 @@ input               { color: black !important; }
   border-bottom: 1px solid #E1E8EE;
   padding: 0;
 }
+
+option { 
+  /* Whatever color  you want */
+  background-color: #221a00;
+  padding: 1vh 1vw;
+}
