--- a/client/src/components/pages/ContactData/ContactData.module.scss
+++ b/client/src/components/pages/ContactData/ContactData.module.scss
@@ -1,7 +1,7 @@
 .ContactData {
     margin: 20px auto;
     width: 80%;
-    text-align: center;
+    //text-align: center;
     box-shadow: 0 2px 3px #ccc;
     //border: 1px solid #eee;
     //padding: 10px;
@@ -21,13 +21,17 @@
     color: rgb(255, 255, 255) !important;   
     width: 100%;
     height: 34px;
-    margin: 2vh 0;
+    margin: .5vh 0;
+    padding: 0;
+    text-indent: 5px;
+    display: flex;
+    align-items: center;
     background-color: transparent !important;
     border: none;
     border-bottom-color:rgb(23, 4, 53);
-    border-bottom-color: rgb(255, 255, 255);
-    border-bottom-width: 3px;
-    border-bottom-style: solid;
+    border-color: rgb(255, 255, 255);
+    border-width: 1px;
+    border-style: solid;
 }
 
 .ContactDataInput2 {
