--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -31,15 +31,15 @@ code {
 
 .btn-primary        { background-color: #357ebd;}
 .my-btn-primary     { color: #357ebd;}
-.btn-primary:hover  { background-color: #2e6ca1;}
+.btn-primary:hover  { background-color: #2f6ea5;}
 
 .btn-info           { background-color: #5bc0de;}
 .my-btn-info        { color: #5bc0de;}
-.btn-info:hover     { background-color: #4da1bb;}
+.btn-info:hover     { background-color: #50a6c0;}
 
 .btn-danger         { background-color: #d9534f;}
 .my-btn-danger      { color: #d9534f;}
-.btn-danger:hover   { background-color: #131111;}
+.btn-danger:hover   { background-color: #cc4f4b;}
 
 a ::selection       { color: white !important; }
 a :active           { color: white !important; }
@@ -70,4 +70,8 @@ option {
 
 .margin-side {
   padding: 0 .5vw;
+}
+
+button {
+  padding: 0;
 }
