cut down unnecesary code

--- a/client/src/components/pages/Sovereignty/Sovereignty.module.scss
+++ b/client/src/components/pages/Sovereignty/Sovereignty.module.scss
@@ -1,5 +1,5 @@
 .Sovereignty {
     padding-bottom: 2vh;
-    border-bottom: 1px solid ;
+    //border-bottom: 1px solid ;
     margin-bottom: 3vh;
 }
