--- a/client/src/components/pages/Characters/Character/Character.module.scss
+++ b/client/src/components/pages/Characters/Character/Character.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 2vh;
-    border-bottom: 1px solid ;
+    //border-bottom: 1px solid ;
     margin-bottom: 3vh;
 }
 
