--- a/client/src/components/pages/Shop/Shop.module.scss
+++ b/client/src/components/pages/Shop/Shop.module.scss
@@ -15,7 +15,7 @@ a {
 .filter label  p {
     margin: 1vh 1vw;
     padding: 1vh 2vw;
-    border: solid white 1px;
+    //border: solid white 1px;
 }
 
 .Items {
