made checkout header and buttons more responsive

--- a/client/src/components/pages/Checkout/CheckoutHeader/CheckoutHeader.module.scss
+++ b/client/src/components/pages/Checkout/CheckoutHeader/CheckoutHeader.module.scss
@@ -118,6 +118,7 @@ a {
 
 .dualGrid {
     //width: 100%;
+    min-height: 7vh;
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-areas: 
