--- a/client/src/components/pages/Orders/Order/Order.module.scss
+++ b/client/src/components/pages/Orders/Order/Order.module.scss
@@ -1,23 +1,43 @@
 .Order {
     margin: 0 0 2vh;
-    width: 100%;
-    display: inline-block;
+    //width: 100%;
+    //height: 100%;
+    display: block;
     padding: 2vh 2vw;
     background-color: #271e00;
 }
 
 .Order p {
-    display: inline;
+    //display: inline;
     // overflow: hidden;
     word-break: break-all;
     white-space: pre-wrap !important;
-    margin: 0;
 }
 .bigbox {
-    display: flex;
-    justify-content: space-evenly;
+    display:block;
+    //justify-content: space-evenly;
 }
 
-.box {
-    width: 50%;
+
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .bigbox {
+        display:flex;
+        justify-content: space-evenly;
+    }
+
+    .box {
+        width: 50%;
+    }
+}
+
+@media only screen and (min-width: 1025px) {
+    /* For desktop: */
+    .bigbox {
+        display:flex;
+        justify-content: space-evenly;
+    }
+    .box {
+        width: 50%;
+    }
 }
