--- a/client/src/components/pages/Orders/Summary/Summary.module.scss
+++ b/client/src/components/pages/Orders/Summary/Summary.module.scss
@@ -1,7 +1,7 @@
-.Link {
-    margin: 0 0 2vh;
+.p {
+    margin: 0 ;
     display: inline-block;
-    padding: 2vh 2vw;
+    padding: 0;
     //width:100%;
     background-color:#271e00;
 }
