--- a/client/src/components/pages/profile/Address/Address.module.scss
+++ b/client/src/components/pages/profile/Address/Address.module.scss
@@ -1,9 +1,12 @@
 .Link {
-    margin: 0 0 2vh;
+    //margin: 0 0 2vh;
     display: inline-block;
-    padding: 2vh 2vw;
+    //padding: 2vh 2vw;
     //width:100%;
     background-color:#271e00;
+}
+.Flex {
+    //justify-content:space-evenly
 }
 
 .Link p {
