--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,17 +1,26 @@
+// @font-face {
+//   font-family: 'Chalkduster';
+//   src: url('./assets/fonts/Chalkduster.ttf');
+// }
+//.menu ul {
+//  font-family: 'Chalkduster';
+//}
+
 body {
   padding-top:0; 
   margin: 0;
-  font-family: 'Chalkduster', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Chalkduster' !important;
+  //font-family: 'Chalkduster', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  //  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  //  sans-serif;
+  //-webkit-font-smoothing: antialiased;
+  //-moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+// code {
+//   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+//     monospace;
+// }
 
 .btn { 
   width: 100%;
