--- a/client/src/components/pages/Orders/Summary/Summary.module.scss
+++ b/client/src/components/pages/Orders/Summary/Summary.module.scss
@@ -1,11 +1,8 @@
-.p {
+.Link p {
     margin: 0 ;
-    display: inline-block;
+    //display: inline-block;
     padding: 0;
     //width:100%;
-    background-color:#271e00;
-}
-
-.Link p {
+    //background-color:#271e00;
     overflow-wrap: anywhere;
 }
