--- a/client/src/components/pages/Auth/Auth.module.scss
+++ b/client/src/components/pages/Auth/Auth.module.scss
@@ -28,6 +28,7 @@
     height: 34px;
     margin: 1vh 0;
     background-color: transparent !important;
+    //background-color: rgba(250, 226, 161, 0.267)  !important;
     border: none;
     border-bottom-color:rgb(23, 4, 53);
     border-bottom-color: rgb(255, 255, 255);
