--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -50,12 +50,32 @@ body {
 .my-btn-danger      { color: #d9534f;}
 .btn-danger:hover   { background-color: #cc4f4b;}
 
-a ::selection       { color: white !important; }
-a :active           { color: white !important; }
+.color-orange {
+  color:rgb(255, 220, 124)
+}
+
+//a ::selection       { color: white !important; }
+//a :active           { color: white !important; }
 
 input               { color: black !important; }
 input:checked         { background-color: black !important; }
 input::selection         { background-color: transparent !important; }
+
+/* Change Autocomplete styles in Chrome*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  //border: 1px solid green;
+  -webkit-text-fill-color: white;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
 
 
 .spread {
@@ -65,6 +85,7 @@ input::selection         { background-color: transparent !important; }
 
 .text-center        { text-align: center; }
 .text-right         { text-align: right; }
+.text-left         { text-align: left; }
 
 .pointer {
   cursor: pointer;
