fixed errors caused by update

--- a/client/src/components/pages/Cart/Cart.module.scss
+++ b/client/src/components/pages/Cart/Cart.module.scss
@@ -78,7 +78,7 @@
   .deleteBtn {
     width: 18px;
     height: 17px;
-    background: url(&quot;delete-icn.svg&quot;) no-repeat center;
+    // background: url(&quot;delete-icn.svg&quot;) no-repeat center;
   }
    
   .likeBtn {
