--- a/client/src/components/Navigation/Navbar/Navbar.module.scss
+++ b/client/src/components/Navigation/Navbar/Navbar.module.scss
@@ -83,6 +83,9 @@ a:visited {
     align-items: center;
 }
 
+.logout {
+    cursor: pointer;
+}
 
 @media only screen and (min-width: 600px) {
     /* For tablets: */
